...
  string_archive_wallet: 'Archive Wallet',
  satPerByte: 'Satoshi Per Byte',
  gasLimit: 'Gas Limit',
  gasPrice: 'Gas Price (Gwei)',
  string_disable: 'Disabled',
  string_done_cap: 'Done',
  string_first_ethereum_wallet_name: 'My Ether',
  string_first_ethereum_classic_wallet_name: 'My Ethereum Classic',
  string_first_ethereum_pow_wallet_name: 'My Ethereum POW',
  string_first_bitcoin_wallet_name: 'My Bitcoin',
  string_first_bitcoin_testnet_wallet_name: 'My Bitcoin Testnet',
  string_first_bitcoincash_wallet_name: 'My Bitcoin Cash',
  string_first_bitcoin_sv_wallet_name: 'My Bitcoin SV',
  string_first_bitcoin_gold_wallet_name: 'My Bitcoin Gold',
  string_first_dash_wallet_name: 'My Dash',
  string_first_digibyte_wallet_name: 'My DigiByte',
  string_first_eos_wallet_name: 'My EOS',
  string_first_telos_wallet_name: 'My Telos',
  string_first_wax_wallet_name: 'My Wax',
  string_first_feather_coin_wallet_name: 'My Feather Coin',
  string_first_fio_wallet_name: 'My FIO',
  string_first_groestlcoin_wallet_name: 'My Groestlcoin',
  string_first_litecoin_wallet_name: 'My Litecoin',
  string_first_monero_wallet_name: 'My Monero',
  string_first_qtum_wallet_name: 'My Qtum',
  string_first_ripple_wallet_name: 'My XRP',
  string_first_smartcash_wallet_name: 'My SmartCash',
  string_first_ufo_wallet_name: 'My UFO',
  string_first_vertcoin_wallet_name: 'My Vertcoin',
...
  string_first_algorand_wallet_name: 'My Algorand',
  string_first_zksync_wallet_name: 'My zkSync',
  my_crypto_wallet_name: 'My %s',
  string_help: 'Help',
  string_exit: 'Exit',
  string_next: 'NEXT',
  string_next_capitalized: 'Next',
  string_no_name: 'No name',
  string_ok: 'OK',
  string_paste: 'Paste',
  string_rename: 'Rename',
  string_resync: 'Resync',
  string_split: 'Split',
...
  exchange_rate_loading_singular: 'Exchange Rate Loading...',
  string_master_private_key: 'Master Private Key',
  string_split_wallet: 'Split %s',
  string_add_edit_tokens: 'Add / Edit Tokens',
  string_get_raw_keys: 'Get Raw Keys',
  string_raw_keys: 'Raw Keys',
  title_create_wallet_select_crypto: 'Choose Wallets to Add',
  title_create_wallet_select_fiat: 'Select Fiat',
  title_change_mining_fee: 'Change Mining Fee',
  title_change_password: 'Change Password',
  title_change_pin: 'Change PIN',
  title_create_wallet: 'Create Wallet',
  title_create_wallets: 'Create Wallets',
...

  category_modal_title: 'Choose a Category',
  transaction_details_notes_title: 'Notes',
  back_button_tap_again_to_exit: 'Please tap BACK again to log out',
  fragment_tx_detail_mining_fee_with_symbol: '+ %1$s fee',
  fragment_tx_detail_mining_fee_with_denom: '+ %1$f %2$s fee',
  confirm_password_text: 'Confirm Password',

  // OTP settings scene:
  title_otp_enabled: '2FA is enabled',
  title_otp_disabled: 'Protect your account with 2FA',
  otp_description: 'Two factor authentication (2FA) prevents unauthorized access from other devices, even if your username and password are compromised.',
  otp_description_two:
...
  password_recovery_reminder_modal_title: 'Password Recovery Setup',
  password_recovery_reminder_modal_message: "You've been accumulating quite a bit of crypto. Would you like to set up your password recovery?",
  password_recovery_reminder_modal_set_up: 'Set Up Now',
  password_check_check_later: 'Later',
  password_check_incorrect_password_title: 'Incorrect Password.',

  password: 'Password',

  buy_crypto_modal_title: 'Wallet Empty',
  buy_crypto_modal_message: 'Your %s wallet is empty. Would you like to buy %s or exchange another crypto into %s?',
  buy_parent_crypto_modal_message_2s: '%1$s%2$s is required to send this transaction. Would you like to buy %2$s or exchange another crypto into %2$s?',
  buy_crypto_decline: 'Not at this time',
  buy_crypto_modal_buy_action: 'Buy %s',
...
    'This process needs an on-chain transaction from the original wallet to %1$s. Mining fees are applied and depend on the network status.',
  private_key_modal_import: 'Import',
  private_key_modal_cancel: 'Cancel',

  restore_wallets_modal_title: 'Restore Wallets',
  restore_wallets_modal_description: 'This will restore all deleted and archived wallets',
  restore_wallets_modal_confirm: 'Confirm',
  restore_wallets_modal_cancel: 'Cancel',

  unique_identifier: 'Unique Identifier',
  unique_identifier_memo: 'Memo',
  unique_identifier_memo_id: 'Memo ID',
  unique_identifier_destination_tag: 'Destination Tag',
...
